maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:30: error: ':' expected but ')' found.
  def isDirectionFree(dir) : Boolean = {
                         ^Escaper:59: error: identifier expected but '}' found.
} 
^